--- a/MonitorApp/bin/AndroidManifest.xml
+++ b/MonitorApp/bin/AndroidManifest.xml
@@ -20,6 +20,7 @@
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -35,8 +36,13 @@
             android:name="org.achartengine.GraphicalActivity"
             android:screenOrientation="landscape" />
         <activity
-            android:name=".StatusActivity"
+            android:name="com.jichao.monitorapp.activitys.StatusActivity"
             android:label="@string/title_activity_task" >
+        </activity>
+        <activity
+            android:name="com.jichao.monitorapp.activitys.MonitorActivity"
+            android:label="@string/title_activity_monitor" 
+            android:screenOrientation="landscape">
         </activity>
     </application>
 
