--- a/MonitorApp/bin/AndroidManifest.xml
+++ b/MonitorApp/bin/AndroidManifest.xml
@@ -7,12 +7,12 @@
     <uses-permission android:name="android.permission.READ_CONTACTS" />
 
     <uses-sdk
-        android:minSdkVersion="8"
+        android:minSdkVersion="14"
         android:targetSdkVersion="21" />
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
