--- a/MonitorApp/bin/AndroidManifest.xml
+++ b/MonitorApp/bin/AndroidManifest.xml
@@ -4,12 +4,11 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
-    <uses-permission android:name="android.permission.READ_CONTACTS" />
-
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="21" />
-
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <application
         android:allowBackup="true"
         android:icon="@drawable/launcher"
